# mnist_svm_example

./: CMakeLists.txt  README.md  convert_mnist_to_png.py  validate.py
code/: CMakeLists.txt  main.cpp
code/ml/: binary_svm.cpp  binary_svm.h  exception.h  multiclass_svm.cpp  multiclass_svm.h  util.cpp  util.h
code/test/: test_binary_svm.cpp  test_multiclass_svm.cpp
vlfeat_slic_cli/: .ycm_extra_conf.py  CMakeLists.txt  binary_svm.cpp  binary_svm.h  exception.h
vlfeat_slic_cli/test/: .test_binary_svm.cpp.swp  test_binary_svm.cpp
